--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
 language: c
 sudo: required
 install: wget https://raw.githubusercontent.com/ocaml/ocaml-ci-scripts/master/.travis-opam.sh
-script: bash -ex .travis-build-with-jbuilder.sh
+script: bash -ex .travis-build.sh
 env:
         #  - INSTALL=false TESTS=true PACKAGE=ocaml-libmpdclient OCAML_VERSION=4.00
         #  - INSTALL=false TESTS=true PACKAGE=ocaml-libmpdclient OCAML_VERSION=4.01
         #  - INSTALL=false TESTS=true PACKAGE=ocaml-libmpdclient OCAML_VERSION=4.02
         #  - INSTALL=false TESTS=true PACKAGE=ocaml-libmpdclient OCAML_VERSION=4.03
         #  - INSTALL=false TESTS=true PACKAGE=ocaml-libmpdclient OCAML_VERSION=4.04
-  - INSTALL=false TESTS=true PACKAGE=ocaml-glib2 OCAML_VERSION=4.05 TRAVIS_TESTS=true
+  - TRAVIS_TESTS=true INSTALL=false TESTS=true PACKAGE=ocaml-glib2 OCAML_VERSION=4.05
 os:
   - linux
     #  - osx
