--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,27 @@
 language: c
+dist: trusty
+
 sudo: required
-install: wget https://raw.githubusercontent.com/ocaml/ocaml-ci-scripts/master/.travis-opam.sh
-script: bash -ex .travis-build.sh
-env:
-        #  - INSTALL=false TESTS=true PACKAGE=ocaml-libmpdclient OCAML_VERSION=4.00
-        #  - INSTALL=false TESTS=true PACKAGE=ocaml-libmpdclient OCAML_VERSION=4.01
-        #  - INSTALL=false TESTS=true PACKAGE=ocaml-libmpdclient OCAML_VERSION=4.02
-        #  - INSTALL=false TESTS=true PACKAGE=ocaml-libmpdclient OCAML_VERSION=4.03
-        #  - INSTALL=false TESTS=true PACKAGE=ocaml-libmpdclient OCAML_VERSION=4.04
-  - TRAVIS_TESTS=true INSTALL=false TESTS=true PACKAGE=ocaml-glib2 OCAML_VERSION=4.05
-os:
-  - linux
-    #  - osx
+
+services:
+  - docker
+
+matrix:
+  include:
+    - env: TYPE=ubuntu-16.04
+    - env: TYPE=ubuntu-17.04
+    - env: TYPE=debian-buster
+    - env: TYPE=centos-6
+    - env: TYPE=centos-7
+
+install:
+  - docker build
+      -t ocaml-glib2/${TYPE}
+      -f travis/Dockerfile.${TYPE}
+      .
+
+script:
+  - docker run
+      --interactive
+      --tty
+      ocaml-glib2/${TYPE}
