--- a/gi-glib2.opam
+++ b/gi-glib2.opam
@@ -1,5 +1,5 @@
 opam-version: "1.2"
-name: "OCaml-GLib2"
+name: "gi-glib2"
 version: "~unknown"
 maintainer: "cedlemo <cedlemo@gmx.com>"
 authors: "cedlemo <cedlemo@gmx.com>"
