--- a/travis/Dockerfile.ubuntu-16.04
+++ b/travis/Dockerfile.ubuntu-16.04
@@ -46,5 +46,7 @@ RUN wget https://raw.github.com/ocaml/opam/master/shell/opam_installer.sh -O - |
 RUN /usr/local/bin/opam init --comp 4.05.0
 RUN opam install ctypes configurator base stdio ctypes-foreign jbuilder odoc bisect_ppx ounit
 RUN echo ". /home/ocaml-glib2/.opam/opam-init/init.sh > /dev/null 2> /dev/null || true" > /home/ocaml-glib2/ocaml-glib2/runtest.sh
+RUN opam pin add --yes gobject-introspection https://github.com/cedlemo/OCaml-GObject-Introspection.git
+RUN opam pin add --yes gi-bindings-generator https://github.com/cedlemo/OCaml-GI-ctypes-bindings-generator.git
 RUN echo "jbuilder runtest" >> /home/ocaml-glib2/ocaml-glib2/runtest.sh
 CMD bash -ex /home/ocaml-glib2/ocaml-glib2/runtest.sh
