Use dune upgrade command

--- a/gi-glib2.opam
+++ b/gi-glib2.opam
@@ -7,10 +7,10 @@ homepage: "https://github.com/cedlemo/OCaml-GLib2"
 bug-reports: "https://github.com/cedlemo/OCaml-GLib2/issues"
 license: "GPL3"
 dev-repo: "https://github.com/cedlemo/OCaml-GLib2"
-build: [["jbuilder" "build" "-p" name "-j" jobs]]
-build-test: [["jbuilder" "runtest" "-p" name "-j" jobs]]
+build: [["dune" "build" "-p" name "-j" jobs]]
+build-test: [["dune" "runtest" "-p" name "-j" jobs]]
 depends: [
-  "jbuilder" {build}
+  "dune" {build & >= "1.0"}
   "ctypes"
   "ctypes-foreign"
   "memcpy"
