--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ matrix:
     - env: TYPE=ubuntu-17.10
     - env: TYPE=debian-buster
     - env: TYPE=centos-7
+    - env: TYPE=fedora-29
 
 install:
   - docker build
