--- a/travis/Dockerfile.centos-7
+++ b/travis/Dockerfile.centos-7
@@ -38,10 +38,8 @@ RUN \
 COPY . /home/opam/ocaml-glib2
 RUN sudo chown -R opam:opam /home/opam/ocaml-glib2
 WORKDIR /home/opam/ocaml-glib2
-RUN opam init --comp 4.05.0
-RUN opam install ctypes configurator base stdio ctypes-foreign jbuilder dune odoc bisect_ppx ounit memcpy
-RUN opam pin add --yes gobject-introspection https://github.com/cedlemo/OCaml-GObject-Introspection.git
-RUN opam pin add --yes gi-bindings-generator https://github.com/cedlemo/OCaml-GI-ctypes-bindings-generator.git
-
+RUN opam switch 4.05
+RUN eval $(opam env)
+RUN ./travis/initialize_ocaml_environment.sh
 RUN ./travis/show_versions.sh
 CMD bash -ex ./travis/runtest.sh
