--- a/travis/Dockerfile.fedora-29
+++ b/travis/Dockerfile.fedora-29
@@ -22,10 +22,10 @@ RUN \
     dbus-x11 \
     wget
 
-
 COPY . /home/opam/ocaml-glib2
 RUN sudo chown -R opam:opam /home/opam/ocaml-glib2
 WORKDIR /home/opam/ocaml-glib2
-
+RUN opam switch 4.05
+RUN eval $(opam env)
 RUN ./travis/show_versions.sh
 CMD bash -ex ./travis/runtest.sh
