--- a/travis/Dockerfile.ubuntu-18.10
+++ b/travis/Dockerfile.ubuntu-18.10
@@ -1,9 +1,8 @@
-FROM ubuntu:17.10
+FROM ocaml/opam2:ubuntu
 
 RUN \
-  apt update && \
-  apt install -y \
-    sudo \
+  sudo apt update && \
+  sudo apt install -y \
     libgtk-3-dev \
     libglib2.0-0 \
     xvfb \
@@ -29,19 +28,10 @@ RUN \
     libffi6 \
     libffi-dev
 
-RUN \
-  useradd --user-group --create-home ocaml-glib2
-
-RUN \
-  echo "ocaml-glib2 ALL=(ALL:ALL) NOPASSWD:ALL" | \
-    EDITOR=tee visudo -f /etc/sudoers.d/ocaml-glib2
-
-USER ocaml-glib2
-
-COPY . /home/ocaml-glib2/ocaml-glib2
-
-RUN sudo chown -R ocaml-glib2:ocaml-glib2 /home/ocaml-glib2/ocaml-glib2
-WORKDIR /home/ocaml-glib2/ocaml-glib2
-RUN ./travis/initialize_ocaml_environment.sh
+COPY . /home/opam/ocaml-glib2
+RUN sudo chown -R opam:opam /home/opam/ocaml-glib2
+WORKDIR /home/opam/ocaml-glib2
+RUN opam switch 4.05
+RUN eval $(opam env)
 RUN ./travis/show_versions.sh
 CMD bash -ex ./travis/runtest.sh
