--- a/travis/Dockerfile.centos-7
+++ b/travis/Dockerfile.centos-7
@@ -38,7 +38,7 @@ RUN \
 COPY . /home/opam/ocaml-glib2
 RUN sudo chown -R opam:opam /home/opam/ocaml-glib2
 WORKDIR /home/opam/ocaml-glib2
-RUN opam switch 4.05
+RUN opam switch OCAML_VERSION
 RUN eval $(opam env)
 RUN ./travis/initialize_ocaml_environment.sh
 RUN ./travis/show_versions.sh
