--- a/.travis.yml
+++ b/.travis.yml
@@ -8,11 +8,21 @@ services:
 
 matrix:
   include:
-    - env: TYPE=ubuntu-18.04
-    - env: TYPE=ubuntu-18.10
-    - env: TYPE=debian-buster
-    - env: TYPE=centos-7
-    - env: TYPE=fedora-29
+    - env: TYPE=ubuntu-18.04 OCAML_VERSION=4.05
+    - env: TYPE=ubuntu-18.04 OCAML_VERSION=4.06
+    - env: TYPE=ubuntu-18.04 OCAML_VERSION=4.07
+    - env: TYPE=ubuntu-18.10 OCAML_VERSION=4.05
+    - env: TYPE=ubuntu-18.10 OCAML_VERSION=4.06
+    - env: TYPE=ubuntu-18.10 OCAML_VERSION=4.07
+    - env: TYPE=debian-buster OCAML_VERSION=4.05
+    - env: TYPE=debian-buster OCAML_VERSION=4.06
+    - env: TYPE=debian-buster OCAML_VERSION=4.07
+    - env: TYPE=centos-7 OCAML_VERSION=4.05
+    - env: TYPE=centos-7 OCAML_VERSION=4.06
+    - env: TYPE=centos-7 OCAML_VERSION=4.07
+    - env: TYPE=fedora-29 OCAML_VERSION=4.05
+    - env: TYPE=fedora-29 OCAML_VERSION=4.06
+    - env: TYPE=fedora-29 OCAML_VERSION=4.07
 
 install:
   - docker build
