--- a/lib/dune
+++ b/lib/dune
@@ -38,7 +38,7 @@
    Regex_match_flags.ml Regex_match_flags.mli Seek_type.ml Seek_type.mli
    Shell_error.ml Shell_error.mli Core_raw.ml Core_raw.mli Error.ml Error.mli
    Rand.ml Rand.mli Date.ml Date.mli Date_time.ml Date_time.mli
-   Time_type.ml Time_type.mli Time_zone.ml Time_zone.mli)
+   Time_type.ml Time_type.mli Time_zone.ml Time_zone.mli Time_val.ml Time_val.mli)
  (deps
   (:< ../generator/gen.exe))
  (action
